--- a/ninjachat.css
+++ b/ninjachat.css
@@ -899,6 +899,8 @@ button {
 .cleanslate .ninjachat .ql-editor.ql-blank::before {
   top: unset !important;
   font-weight: normal !important;
+  position: absolute !important;
+  left: 13px !important;
 }
 .ninjachat .ql-editor p {
   font-size: 13px !important;
