--- a/ninjachat.css
+++ b/ninjachat.css
@@ -250,6 +250,14 @@ button {
 .cleanslate ul {
   font-size: 13px !important;
 }
+.cleanslate .ql-tooltip.ql-editing {
+  position: absolute !important;
+  top: -10px !important;
+  left: 8px !important;
+  padding-bottom: 2px !important;
+  padding-right: 7px !important;
+  padding-left: 7px !important;
+}
 .cleanslate .message-text.text-break ol,
 .cleanslate .message-text.text-break ul {
   padding-left: 15px !important;
