--- a/fonts.css
+++ b/fonts.css
@@ -57,3 +57,18 @@
 .ninjachat-roboto {
   font-family: infinity-roboto !important;
 }
+.ninjachat-helvetica{
+  font-family: Helvetica, sans-serif !important;
+}
+.ninjachat-tahoma{
+  font-family: Tahoma, sans-serif !important;
+}
+.ninjachat-helvetica{
+  font-family: Helvetica, sans-serif !important;
+}
+.ninjachat-helvetica{
+  font-family: Helvetica, sans-serif !important;
+}
+.ninjachat-helvetica{
+  font-family: Helvetica, sans-serif !important;
+}
