--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: infinity-opensans;
-  src: url(https://widgets.500apps.com/fonts/OpenSans-Regular.ttf);
+  src: url(https://my.ap1.500apps.com/pcors?url=https://widgets.500apps.com/fonts/OpenSans-Regular.ttf);
   unicode-range: U+000-5FF;
   font-style: normal;
   font-weight: 400;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: infinity-opensans;
-  src: url(https://widgets.500apps.com/fonts/OpenSans-SemiBold.ttf);
+  src: url(https://my.ap1.500apps.com/pcors?url=https://widgets.500apps.com/fonts/OpenSans-SemiBold.ttf);
   unicode-range: U+000-5FF;
   font-style: normal;
   font-weight: 400;
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: infinity-poppins;
-  src: url(https://widgets.500apps.com/fonts/Poppins-Regular.ttf);
+  src: url(https://my.ap1.500apps.com/pcors?url=https://widgets.500apps.com/fonts/Poppins-Regular.ttf);
   unicode-range: U+000-5FF;
   font-style: normal;
   font-weight: 400;
@@ -28,7 +28,7 @@
 
 @font-face {
   font-family: infinity-poppins;
-  src: url(https://widgets.500apps.com/fonts/Poppins-SemiBold.ttf);
+  src: url(https://my.ap1.500apps.com/pcors?url=https://widgets.500apps.com/fonts/Poppins-SemiBold.ttf);
   unicode-range: U+000-5FF;
   font-style: normal;
   font-weight: 400;
@@ -40,7 +40,7 @@
 
 @font-face {
   font-family: infinity-roboto;
-  src: url(https://widgets.500apps.com/fonts/Roboto-Regular.ttf);
+  src: url(https://my.ap1.500apps.com/pcors?url=https://widgets.500apps.com/fonts/Roboto-Regular.ttf);
   unicode-range: U+000-5FF;
   font-style: normal;
   font-weight: 400;
@@ -48,7 +48,7 @@
 
 @font-face {
   font-family: infinity-roboto;
-  src: url(https://widgets.500apps.com/fonts/Roboto-Bold.ttf);
+  src: url(https://my.ap1.500apps.com/pcors?url=https://widgets.500apps.com/fonts/Roboto-Bold.ttf);
   unicode-range: U+000-5FF;
   font-style: normal;
   font-weight: 400;
