updated script & css

--- a/ninjachat.css
+++ b/ninjachat.css
@@ -768,7 +768,7 @@ button {
   background-color: #2c7be5;
   border-color: #2c7be5;
   color: #fff;
-  padding: 12px 12px;
+  padding: 8px 12px !important;
   border-radius: 4px;
   margin-right: 10px;
 }
@@ -962,4 +962,12 @@ button {
 }
 .cleanslate .infinity-chat-icon .ninjachat-icon {
   right: 75px !important;
+}
+.ninjachat-strip.ninjachat-icon.chat {
+  width: 350px !important;
+  background: #3153f7;
+  padding: 10px !important;
+  height: 25px !important;
+  color: #fff;
+  border-radius: 4px !important;
 }
