--- a/ninjachat.css
+++ b/ninjachat.css
@@ -3,7 +3,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }*/
 /* The Modal (background) */
-.ninjachat .modal {
+.ninjachat .ninjachat-modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   /* Sit on top */
@@ -17,7 +17,13 @@
   z-index: 999 !important;
 }
 /* Modal Content */
-.ninjachat .modal .modal-content {
+.cleanslate .ninjachat .ninjachat-modal-header {
+  background-color: #fff !important;
+  padding: 1.5rem !important;
+  border-top-left-radius: 4px !important;
+  border-top-right-radius: 4px !important;
+}
+.cleanslate .ninjachat .ninjachat-modal .ninjachat-modal-content {
   transform: translate(0, 30px);
   margin: 0 auto !important;
   background: #f6fafd !important;
@@ -28,10 +34,8 @@
   background-clip: padding-box;
   border-radius: 0.5rem;
   max-width: 600px;
-  padding: 30px !important;
-  font-size: 0.9375rem;
 }
-.ninjachat .modal-content .border-top {
+.ninjachat .ninjachat-modal .border-top {
   justify-content: start;
 }
 .ninjachat .modalInput {
@@ -53,10 +57,10 @@
 .ninjachat .ml-auto {
   margin-left: auto;
 }
-.ninjachat .modal-content p {
+.ninjachat .ninjachat-modal-content p {
   font-size: 0.9375rem !important;
 }
-.ninjachat .modal-content .close {
+.ninjachat .ninjachat-modal-content .close {
   position: absolute;
   right: 14px;
   font-size: 19px;
@@ -124,7 +128,7 @@
   border: 0 !important;
   border-top: 1px solid #e3ebf6 !important;
 }
-.ninjachat .modal-content .mt-18px {
+.ninjachat .ninjachat-modal-content .mt-18px {
   margin-top: 18px !important;
 }
 .ninjachat .feedback-submit {
@@ -900,15 +904,15 @@ button {
   padding: 0.5rem 1.2rem !important;
 }
 @media (min-width: 340px) and (max-width: 768px) {
-  .ninjachat .modal .modal-content {
+  .ninjachat .ninjachat-modal .ninjachat-modal-content {
     padding: 17px !important;
   }
 }
 @media (max-width: 575.96px) {
-  .ninjachat .modal .modal-content {
+  .ninjachat .ninjachat-modal .ninjachat-modal-content {
     margin: 10px !important;
   }
-  .ninjachat .modal-content .close {
+  .ninjachat .ninjachat-modal-content .close {
     right: 10px !important;
     top: 3px !important;
   }
