--- a/ninjachat.css
+++ b/ninjachat.css
@@ -890,15 +890,15 @@ button {
 .ninjachat .ninjachat-reply {
   text-align: right !important;
 }
-.cleanslate .thin-scroll::-webkit-scrollbar {
+.cleanslate .ninja-thin-scroll::-webkit-scrollbar {
   width: 7px;
 }
-.thin-scroll::-webkit-scrollbar-track {
+.ninja-thin-scroll::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px #f9fbfd;
   border-radius: 5px;
 }
 
-.thin-scroll::-webkit-scrollbar-thumb {
+.ninja-thin-scroll::-webkit-scrollbar-thumb {
   background: #e0e0e0;
   border-radius: 5px;
 }
