--- a/ninjachat.css
+++ b/ninjachat.css
@@ -1,8 +1,4 @@
 @import url("https://infinity.500apps.com/fonts/feather/feather.css?v=infinity_release_tag");
-/*body {
-  font-family: Arial, Helvetica, sans-serif;
-}*/
-/* The Modal (background) */
 .ninjachat .ninjachat-modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -159,7 +155,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px !important;
 }
 .mobile-chat-widget .ninjachat-footer-section .ninjachat-text-area-icons {
   height: 90px !important;
@@ -169,7 +164,7 @@
   padding: 0px 50px 0px 0px;
   width: 100%;
   height: 100%;
-  font-family: "Poppins", sans-serif;
+  font-family: inherit !important;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.33;
@@ -223,6 +218,7 @@ button {
 }
 .cleanslate .ninjachat .ninjachat-footer-icons {
   width: 100% !important;
+  height: unset !important;
 }
 .ninjachat .chat-body-height::-webkit-scrollbar {
   width: 5px;
@@ -242,20 +238,15 @@ button {
 }
 .cleanslate .ninjachat .ninjachat-footer-icons {
   display: inline !important;
-  height: 80px !important;
 }
 .cleanslate .ninjachat .margin-zero {
   word-break: break-word !important;
 }
 .cleanslate .ninjachat .ninjachat-send-img {
-  bottom: 40px !important;
+  bottom: -1px !important;
   width: 22px !important;
   height: 22px !important;
   right: 15px !important;
-}
-.cleanslate .message-text.text-break p {
-  word-break: break-word !important;
-  font-size: 13px !important;
 }
 .cleanslate ol,
 .cleanslate ul {
@@ -284,18 +275,17 @@ button {
   right: 20px !important;
 }
 .ninjachat-footer-section .ql-toolbar.ql-snow .ql-formats {
-  margin-left: 10px !important;
+  margin-left: 5px !important;
+}
+.cleanslate .ninjachat-footer-section .ql-list {
+  padding-left: 2px !important;
+  padding-right: 0px !important;
 }
 .cleanslate .ninjachat .ql-toolbar.ql-snow + .ql-container.ql-snow {
   border: unset;
   margin-top: 18px;
-  margin-left: -12px !important;
-}
-.flex-column-reverse {
-  width: 320px;
 }
 .ninjachat-footer-section .flex-column-reverse {
-  padding: 8px 15px !important;
   border-top: 1px solid #e9e9f1 !important;
 }
 .ninjachat-footer-section {
@@ -343,35 +333,22 @@ button {
 .ninjachat-footer-section .ql-toolbar.ql-snow .ql-formats .ql-picker {
   top: 4px;
 }
-.cleanslate .ninjachat-footer-section .ql-editor {
-  max-height: 39px !important;
-  min-height: 39px !important;
-  padding-top: 8px !important;
-  width: 290px;
-  background-color: transparent !important;
-  padding-left: 0px !important;
-  padding-bottom: 0px !important;
-  margin-bottom: 0px !important;
+.cleanslate .ninjachat .ql-editor {
+  padding-bottom: 8px !important;
+  margin-bottom: 8px !important;
+  padding-top: 15px !important;
 }
 .cleanslate .ninjachat-footer-section .ql-editor p span {
   color: #000 !important;
-  font-size: 12px !important;
+  font-size: 13px !important;
 }
 .cleanslate .ninjachat-footer-section .ql-container {
-  min-height: unset !important;
-  max-height: 35px;
-  overflow: hidden !important;
+  min-height: 45px !important;
+  max-height: 100px !important;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
+  padding: 4px 5px 4px 0px !important;
   font-family: inherit !important;
-}
-.ninjachat-footer-section .ql-snow.ql-toolbar button svg,
-.ql-snow .ql-toolbar button svg {
-  width: 15px;
-  height: 15px;
-}
-.ninjachat-footer-section .ql-snow .ql-color-picker .ql-picker-label svg,
-.ql-snow .ql-icon-picker .ql-picker-label svg {
-  width: 15px;
-  height: 15px;
 }
 .cleanslate .ql-editor li:not(.ql-direction-rtl):before {
   margin-left: 0.3em !important;
@@ -385,14 +362,14 @@ button {
 .margin-zero p {
   margin: 0;
 }
-.cleanslate .ql-editor::-webkit-scrollbar {
-  width: 3px;
+.cleanslate .ql-container::-webkit-scrollbar {
+  width: 5px;
 }
-.cleanslate .ql-editor::-webkit-scrollbar-thumb {
+.cleanslate .ql-container::-webkit-scrollbar-thumb {
   background: #d2d2d2;
   border-radius: 5px;
 }
-.cleanslate .ql-editor::-webkit-scrollbar-track {
+.cleanslate .ql-container::-webkit-scrollbar-track {
   box-shadow: inset 20px 20px 20px #fff;
   border-radius: 0px;
 }
@@ -427,14 +404,22 @@ button {
   box-shadow: 0 0 0 0.2rem rgb(130 138 145 / 0%) !important;
 }
 .textarea-emoji-control:hover .ql-stroke {
-  stroke: #06c !important;
+  stroke: #1b17cf !important;
 }
 .textarea-emoji-control:hover .ql-fill {
-  fill: #06c !important;
+  fill: #1b17cf !important;
+}
+.cleanslate .ql-snow.ql-toolbar button:hover {
+  color: #1b17cf !important;
+  stroke: #1b17cf !important;
+}
+.cleanslate .ql-snow.ql-toolbar button:hover .ql-stroke {
+  color: #1b17cf !important;
+  stroke: #1b17cf !important;
 }
 .ninjachat-footer-section .ql-snow.ql-toolbar button,
 .ql-snow .ql-toolbar button {
-  width: 30px;
+  width: 24px;
 }
 /* Animation effects */
 .ninjachat-animation-bounce-enter-active {
@@ -625,8 +610,11 @@ button {
   }
 }
 .cleanslate .ninjachat-chat .ninjachat-bg-img-section {
-  max-height: calc(100vh - 410px) !important;
+  max-height: calc(100vh - 520px) !important;
   overflow-x: hidden !important;
+}
+.cleanslate.mobile-chat-widget .ninjachat-chat .chat-body-height.ninjachat-bg-img-section {
+  max-height: calc(100vh - 300px) !important;
 }
 .mobile-chat-widget.cleanslate .main-content .ninjachat-chat {
   width: 100% !important;
@@ -708,7 +696,6 @@ button {
 .cleanslate .main-content .ninjachat-chat .ninjachat-widget-close .ninjachat-close-icon {
   width: 13px !important;
   height: 13px !important;
-  /* top: 25px !important; */
   opacity: 0.75;
 }
 .cleanslate .main-content .ninjachat-chat .ninjachat-widget-close .ninjachat-close-icon:hover {
@@ -716,51 +703,91 @@ button {
 }
 .cleanslate .ninjachat-chat .form-border {
   border: 1px solid #f1f1f1 !important;
-  margin-bottom: 8px !important;
   padding: 8px !important;
-  width: 93%;
+  width: 93% !important;
   border-radius: 4px !important;
-  margin-top: 5px !important;
+}
+.cleanslate .ninjachat-chat .nc-online-form .form-border,
+.cleanslate .ninjachat-chat .nc-offline-form .form-border {
+  width: 93% !important;
+}
+.cleanslate .nc-online-form .primary-margin .btn-primary,
+.cleanslate .nc-offline-form .primary-margin .btn-primary {
+  border-radius: 4px !important;
+}
+.cleanslate .ninja-input-group .form-border {
+  border-top-right-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
 }
 .cleanslate .modal-prevent-closing {
   background: #fff !important;
-  box-shadow: 0px 0px 15px 2px #f1f1f1 !important;
+  box-shadow: 0px 0px 15px 2px #dae2fb61 !important;
   position: absolute !important;
   width: 86% !important;
-  top: 100px !important;
+  bottom: 140px !important;
+  border: 1px solid #dae2fb !important;
   border-radius: 4px !important;
+  right: 25px !important;
+  left: 25px !important;
 }
 .cleanslate .modal-prevent-closing .form-padding {
-  padding: 15px !important;
+  padding: 23px 19px 19px !important;
+}
+.cleanslate .email-send {
+  transform: rotate(42deg);
+  margin-left: -4px !important;
 }
 .cleanslate .ninjachat .border-bottom {
-  border-bottom: 1px solid #f1f1f1 !important;
-  padding: 12px !important;
+  padding: 15px 19px 0px !important;
 }
 .cleanslate .ninjachat .border-top {
-  border-top: 1px solid #f1f1f1 !important;
   display: flex;
   justify-content: end;
-  padding: 20px !important;
+  padding: 15px 0px 0px 0px !important;
   background-color: #fff;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  margin-top: 0px !important;
+}
+.cleanslate .ninjachat-chat .nc-online-form .form-border,
+.cleanslate .ninjachat-chat .nc-offline-form .form-border {
+  margin-bottom: 10px !important;
+}
+.cleanslate .modal-prevent-closing label {
+  font-size: 13px !important;
+}
+.cleanslate .modal-prevent-closing #name-input {
+  margin-top: 3px !important;
+  margin-bottom: 2px !important;
 }
 .cleanslate .modal-prevent-closing .heading-font {
-  font-size: 15px !important;
-  font-weight: 500 !important;
+  font-size: 13px !important;
+  font-weight: 600 !important;
+  padding: 0px !important;
 }
 .cleanslate .modal-prevent-closing .modal-cross-icon {
-  width: 12px !important;
+  width: 10px !important;
   opacity: 0.5 !important;
   cursor: pointer !important;
   position: absolute !important;
-  right: 13px !important;
-  top: 18px !important;
+  right: 5px !important;
+  top: 5px !important;
+  background: #dae2fb;
+  padding: 5px !important;
+  border-radius: 50%;
 }
 .cleanslate .modal-prevent-closing .modal-cross-icon:hover {
   opacity: 0.75 !important;
+}
+.cleanslate .ninja-input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+.cleanslate .ninja-input-group-append {
+  margin-left: -1px;
+  display: flex;
 }
 .cleanslate .ninjachat-close-icon {
   width: 14px !important;
@@ -768,24 +795,38 @@ button {
   cursor: pointer !important;
   position: absolute;
   right: 22px !important;
-  top: 26px !important;
+  top: 24px !important;
   filter: invert(1);
 }
-.cleanslate .ninjachat .btn-secondary {
-  color: #ffffff;
-  background-color: #6e84a3;
-  border-color: #6e84a3;
+.cleanslate .ninjachat .btn-white {
+  color: #283e59;
+  background-color: #ffffff;
+  border-color: #e3ebf6 !important;
   padding: 6px 12px;
   border-radius: 4px;
   margin-right: 10px;
+  border: 1px solid;
+}
+.cleanslate .ninjachat .btn-white:hover {
+  background-color: #f9fbfd;
+  border-color: #d2ddec;
 }
 .cleanslate .ninjachat .btn-primary {
-  background-color: #2c7be5;
-  border-color: #2c7be5;
+  background-color: #1b17cf;
+  border-color: #1b17cf;
   color: #fff;
-  padding: 8px 12px !important;
+  padding: 8px 0px !important;
   border-radius: 4px;
-  margin-right: 10px;
+  border-bottom-left-radius: 4px !important;
+  border-top-left-radius: 4px !important;
+}
+.cleanslate .ninjachat .btn-primary:hover {
+  color: #ffffff;
+  background-color: #2421da;
+  border-color: #2421da;
+}
+.cleanslate .ninjachat .btn-primary:focus {
+  outline: none !important;
 }
 .cleanslate .ql-snow .ql-tooltip {
   border: 1px solid #ccc !important;
@@ -814,9 +855,10 @@ button {
   padding-top: 1px !important;
 }
 .cleanslate .ql-files svg {
-  width: 22px !important;
-  height: 22px !important;
+  width: 20px !important;
+  height: 20px !important;
   margin-left: -3px;
+  margin-top: -2px;
 }
 .cleanslate .ql-files svg:hover path {
   fill: #1976d3 !important;
@@ -838,12 +880,13 @@ button {
 .ninjachat-bubble .ninjachat-bubble-comment-section-replay .ninjachat-avatar-flex {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: start !important;
 }
 .ninjachat-bubble .ninjachat-bubble-comment-section-replay .ninjachat-avatar-flex .align-self-end {
   align-self: end;
 }
 .ninjachat-bubble .ninjachat-bubble-comment-section-replay .ninjachat-avatar-flex .rounded-avatar {
-  border-radius: 50%;
+  border-radius: 4px !important;
   margin-right: 6px !important;
   width: 23px;
   height: 23px;
@@ -922,9 +965,9 @@ button {
   top: unset !important;
   font-weight: normal !important;
 }
-.cleanslate .ninjachat .ql-editor p {
+.cleanslate .ninjachat .ql-editor {
   font-size: 13px !important;
-  margin-left: 13px !important;
+  margin: 0px 4px 0px 13px !important;
 }
 .cleanslate .ninjachat-chat .ninjachat-footer-500app {
   border-top: 1px solid #efeff1 !important;
@@ -938,7 +981,7 @@ button {
 }
 .cleanslate .primary-margin {
   margin-top: 10px !important;
-  margin-bottom: 10px !important;
+  margin-bottom: 0px !important;
 }
 .cleanslate textarea {
   resize: none;
@@ -966,7 +1009,201 @@ button {
   color: #fff;
   border-radius: 4px !important;
 }
-.ninjachat-help-text {
-  padding: 5px 16px !important;
-  color: #005ffb !important;
+.cleanslate .ninjachat-help-text {
+  padding: 0px !important;
+  color: #1528b3 !important;
+  font-size: 12px !important;
+}
+.cleanslate .ninjachat .ninjachat-avatar-flex .align-self-end .name-gravatar {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  border-radius: 4px;
+  font: 12px / 30px Helvetica, Arial, sans-serif;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  user-select: none;
+  background-color: #1155cc;
+  color: rgb(255 255 255);
+}
+.cleanslate .ninjachat-mail-option .transcript-bg {
+  position: absolute;
+  top: 20px;
+  z-index: 2;
+  right: 77px;
+  width: 20px !important;
+  height: 20px !important;
+}
+.cleanslate .ql-bold:hover,
+.cleanslate .ql-italic:hover,
+.cleanslate .ql-underline:hover,
+.cleanslate .ql-files:hover,
+.cleanslate .ql-strike:hover,
+.cleanslate .ql-link:hover,
+.cleanslate .ql-list:hover {
+  background: #1915e70f !important;
+  border-radius: 50% !important;
+  width: 24px !important;
+  height: 24px !important;
+  padding: 4px 4px !important;
+}
+.cleanslate .ql-snow.ql-toolbar button,
+.cleanslate .ql-snow .ql-toolbar button {
+  padding: 4px 4px !important;
+}
+.cleanslate .ninjachat-mail-option .transcript-img {
+  width: 19px;
+  filter: grayscale(100) brightness(5.8);
+  margin-left: -4px !important;
+}
+.cleanslate .ninjachat-mail-option .transcript-img:hover {
+  filter: grayscale(100) brightness(7) !important;
+}
+/* Tooltip css */
+.ninjachat-option .tooltip {
+  max-width: 200px;
+  padding: 0.25rem 0.5rem !important;
+  color: #12263f;
+  text-align: center;
+  background-color: #e3ebf6;
+  border-radius: 0.375rem;
+  top: -15px;
+  font-size: 11px;
+  display: block;
+  right: 40px;
+  margin-bottom: 15px;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  width: fit-content;
+  transform: translateY(10px);
+  transition: all 0.25s ease-out;
+  box-shadow: 2px 2px 6px rgba(206, 206, 206, 0.28);
+}
+.ninjachat-option .tooltip:before {
+  bottom: -20px;
+  content: " ";
+  display: block;
+  height: 20px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}
+.ninjachat-option .tooltip:after {
+  border-left: solid transparent 8px;
+  border-right: solid transparent 8px;
+  border-top: solid #e3ebf6 8px;
+  bottom: -8px;
+  content: " ";
+  height: 0;
+  left: 50%;
+  margin-left: -13px;
+  position: absolute;
+  width: 0;
+}
+.ninjachat-option:hover .tooltip {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0px);
+}
+
+.cleanslate .validation {
+  text-align: center;
+}
+
+.cleanslate .validation .valid-text {
+  color: red !important;
+  margin-right: 10px !important;
+  display: block;
+  padding-top: 4px !important;
+}
+.cleanslate .ticks {
+  width: 14px !important;
+  position: relative;
+  top: 4px !important;
+}
+.cleanslate .message-text.text-break {
+  word-break: break-word !important;
+}
+.cleanslate.ninjachat-default .conferences-btn .btn-success,
+.cleanslate.ninjachat-bubble .conferences-btn .btn-success,
+.cleanslate.ninjachat-ultra .conferences-btn .btn-success {
+  border: 1px solid #00d97e;
+  padding: 5px 15px;
+  border-radius: 4px;
+  color: #00d97e !important;
+}
+.cleanslate.ninjachat-default .conferences-btn .btn-success:hover,
+.cleanslate.ninjachat-bubble .conferences-btn .btn-success:hover,
+.cleanslate.ninjachat-ultra .conferences-btn .btn-success:hover {
+  color: #02c171 !important;
+}
+.cleanslate.ninjachat-default .conferences-btn .btn-danger,
+.cleanslate.ninjachat-bubble .conferences-btn .btn-danger,
+.cleanslate.ninjachat-ultra .conferences-btn .btn-danger {
+  border: 1px solid #e63757;
+  padding: 5px 15px;
+  border-radius: 4px;
+  color: #e63757 !important;
+  margin-left: 8px;
+}
+.cleanslate.ninjachat-default .conferences-btn .btn-danger:hover,
+.cleanslate.ninjachat-bubble .conferences-btn .btn-danger:hover,
+.cleanslate.ninjachat-ultra .conferences-btn .btn-danger:hover {
+  color: #ff002f !important;
+}
+.cleanslate input {
+  height: auto !important;
+}
+.cleanslate .ninjachat-welcome-message img {
+  width: 20px !important;
+}
+.cleanslate .name-gravatar.mr-2 {
+  margin-right: 6px !important;
+  width: 16px !important;
+  height: 16px !important;
+  padding: 5px !important;
+}
+.cleanslate .sending {
+  display: flex !important;
+}
+.cleanslate .name-gravatar span {
+  font-size: 11px;
+}
+.cleanslate.ninjachat-default .conference-call-message {
+  background-color: #dae2fb;
+  width: fit-content !important;
+  word-break: break-word;
+  padding: 16px !important;
+  border-radius: 14px !important;
+  border-bottom-left-radius: 2px !important;
+}
+.cleanslate .conference-call-message .heading-font {
+  font-size: 13px !important;
+  padding-top: 0px !important;
+}
+.cleanslate.ninjachat-bubble .conference-call-message {
+  width: fit-content !important;
+  padding: 10px 15px !important;
+  border-radius: 8px !important;
+}
+.cleanslate.ninjachat-bubble .conference-call-message .heading-font,
+.cleanslate.ninjachat-ultra .conference-call-message .heading-font {
+  margin-bottom: 8px !important;
+}
+.cleanslate.ninjachat-ultra .conference-call-message {
+  width: fit-content !important;
+  padding: 12px 20px !important;
+  border-radius: 20px 20px 0px 20px !important;
+  margin: 0 0 0 auto !important;
+}
+.cleanslate.ninjachat-ultra .ninjachat-ultra-comment-section-replay .ninjachat-avatar-flex {
+  justify-content: end;
+}
+.cleanslate.ninjachat-ultra .align-self-end .name-gravatar.mr-2 {
+  margin-right: 0px !important;
+}
+.cleanslate .ninjachat-footer-section .ql-container .ql-editor {
+  min-height: 0px !important;
 }
