updated script css

--- a/ninjachat.css
+++ b/ninjachat.css
@@ -247,6 +247,7 @@ button {
   width: 22px !important;
   height: 22px !important;
   right: 15px !important;
+  z-index: 99 !important;
 }
 .cleanslate ol,
 .cleanslate ul {
@@ -345,8 +346,7 @@ button {
 .cleanslate .ninjachat-footer-section .ql-container {
   min-height: 45px !important;
   max-height: 100px !important;
-  overflow-y: auto !important;
-  overflow-x: hidden !important;
+  overflow: auto;
   padding: 4px 5px 4px 0px !important;
   font-family: inherit !important;
 }
@@ -1203,7 +1203,4 @@ button {
 }
 .cleanslate.ninjachat-ultra .align-self-end .name-gravatar.mr-2 {
   margin-right: 0px !important;
-}
-.cleanslate .ninjachat-footer-section .ql-container .ql-editor {
-  min-height: 0px !important;
 }
